[package]
name = "tiny-redis"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tiny-redis-server"
path = "src/bin/server.rs"

[[bin]]
name = "tiny-redis-cli"
path = "src/bin/cli.rs"

[dependencies]
atoi = "2.0.0"
bytes = "1.10.1"
clap = { version = "4.5.43", features = ["derive"] }
log = "0.4.27"
tklog = "0.3.0"
tokio = { version = "1.47.1", features = ["full"] }
